--- a/index.html
+++ b/index.html
@@ -3,9 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <title>Document</title>
 </head>
 <body>
+
+
     
+    <div class ="container">
+        <h1>Bradley Acosta Rojas</h1>
+        <h2>Web Developer</h2>
+        <h3>Welcome</h3>
+
+    </div>
+
+
+
+
 </body>
 </html>
