--- a/index.html
+++ b/index.html
@@ -4,21 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="index.css" />
-    <title>Document</title>
+  
+    <title>BradleyAcosta.tech</title>
 </head>
 <body>
 
+    <div class="container">WELCOME<br/></div>
 
-    
-    <div class ="container">
-        <h1>Bradley Acosta Rojas</h1>
-        <h2>Web Developer</h2>
-        <h3>Welcome</h3>
+    <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS<br></div>
 
-    </div>
+    <div class="WebDeveloper">WEB DEVELOPER<br><br/><br><br/></div>
 
-
-
+    <div style="width: 38%;  height: 252px; text-align: justify; color: white; font-size: 27px; font-family: Modern Sans; font-weight: 500; word-wrap: break-word">Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.</div>
 
 </body>
 </html>
