Finished First CSS

--- a/index.html
+++ b/index.html
@@ -15,7 +15,15 @@
 
     <div class="WebDeveloper">WEB DEVELOPER<br><br/><br><br/></div>
 
-    <div style="width: 38%;  height: 252px; text-align: justify; color: white; font-size: 27px; font-family: Modern Sans; font-weight: 500; word-wrap: break-word">Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.</div>
+    <div class= "TextOMS" >Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.</div>
 
+    <nav class="CTA">
+        <ul style="list-style: none;">
+          <li><a href="#home">Home</a></li>
+          <li><a href="#My Projects">My Projects</a></li>
+          <li><a href="#about-me">About Me</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
 </body>
 </html>
