--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 
     <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS<br></div>
 
-    <div class="WebDeveloper">WEB DEVELOPER<br><br/><br><br/></div>
+    <div class="WebDeveloper">WEB DEVELOPER<br><br/><br><br/>
+    </div>
 
-    <div class= "TextOMS" >Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.</div>
+
+    
+    <div class="TextOMS">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <path d="M20 10L0 10" stroke="white"/>
+        </svg>
+        Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.
+    </div>
 
     <nav class="CTA">
         <ul style="list-style: none;">
