--- a/index.html
+++ b/index.html
@@ -3,9 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="index.css" />
+  
+    <title>BradleyAcosta.Tech</title>
 </head>
 <body>
+
+    <div class="container">WELCOME!!<br/></div>
+
+    <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS<br></div>
+
+    <div class="WebDeveloper">WEB DEVELOPER<br><br/><br><br/>
+    </div>
+
+
     
+    <div class="TextOMS">
+        <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+            <path d="M20 10L0 10" stroke="white"/>
+        </svg>
+        Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.
+    </div>
+
+    <nav class="CTA">
+        <ul style="list-style: none;">
+          <li><a href="index.html">Home</a></li>
+          <li><a href="#My Projects">My Projects</a></li>
+          <li><a href="#about-me">Missions and Visions</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
 </body>
 </html>
