Working on projects

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <nav class="CTA">
         <ul style="list-style: none;">
           <li><a href="index.html">Home</a></li>
-          <li><a href="#My Projects">My Projects</a></li>
+          <li><a href="Projects.html">My Projects</a></li>
           <li><a href="#about-me">Missions and Visions</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
