Working on projects

--- a/Projects.html
+++ b/Projects.html
@@ -30,8 +30,18 @@
             <span class="starting-up-repository-description">We started a GitHub repository to help keep track of tutorial materials and for future use as a digital portfolio to host code samples for potential employers.</span>
         </div>
         <div class="node-jc">
+            <img class="Image4" style="width: 260px; height: 260px" src="public/images/image-5.png">
             <span class="node-text">Node.jc</span>
-            <span class="node-description">This was the start of our server-side application. We used Node and its built-in library to perform native filesystem operations. We used another built-in library to ensure that all file paths were constructed to work on the host operating system with</span>
+            <span class="node-description">This was the start of our server-side application. We used Node and its built-in library to perform native filesystem operations. We used another built-in library to ensure that all file paths were constructed to work on the host operating system with no conditional logic.</span>
+        </div>
+
+        <div class="node-package-manager">
+            <img class="Image4" style="width: 233px; height: 162px" src="public/images/image-7.png">
+            <br></br>
+            <span class="npm-text">Node Package Manager</span>
+            <span class="description">NPM stands for Node Package Manager. It is a package manager for the Node JavaScript platform. NPM is known as the worlds largest software registry. Open-source developers all over the world use NPM to publish and share their source code. NPM consists of three components:</span>
+          </div>
+            </ul>
         </div>
     </div>
 </body>
