Css Work and HTML

--- a/Projects.html
+++ b/Projects.html
@@ -31,15 +31,29 @@
         </div>
         <div class="node-jc">
             <img class="Image4" style="width: 260px; height: 260px" src="public/images/image-5.png">
-            <span class="node-text">Node.jc</span>
+            <span class="node-text">Node.jc</span><br></br>
             <span class="node-description">This was the start of our server-side application. We used Node and its built-in library to perform native filesystem operations. We used another built-in library to ensure that all file paths were constructed to work on the host operating system with no conditional logic.</span>
         </div>
 
         <div class="node-package-manager">
-            <img class="Image4" style="width: 233px; height: 162px" src="public/images/image-7.png">
-            <br></br>
+            <img class="Image7" style="width: 233px; height: 162px" src="public/images/image-7.png">
+            <br>
             <span class="npm-text">Node Package Manager</span>
+            <br></br>
             <span class="description">NPM stands for Node Package Manager. It is a package manager for the Node JavaScript platform. NPM is known as the worlds largest software registry. Open-source developers all over the world use NPM to publish and share their source code. NPM consists of three components:</span>
+          </div>
+
+          <div class="npm-libraries">
+            <div class="npm-library-container">
+              <span class="npm-library-title">Some of NPM Libraries I used<br/></span>
+              <img class="Image12" style="width: 206.43px; height: 73.62px" src="public/images/image-12.png">
+              <img class="Image13" style="width: 206.43px; height: 73.62px" src="public/images/image-13.png">
+                <br>
+                <br>
+              <img class="Image14" style="width: 155.18px; height: 158.07px" src="public/images/image-14.png">
+
+              <span class="npm-library-description">Electron helps us develop cross-platform applications by using existing web technologies, because all the platforms support web technologies. Electron helps in developing cross-platform apps easier.</span>
+            </div>
           </div>
             </ul>
         </div>
