--- a/Projects.html
+++ b/Projects.html
@@ -10,11 +10,11 @@
     <div class="container">
         <div class="background"></div>
         <div class="project-objective">
-            <span class="objective-text">Project Objective:</span>
+            <span class="objective-text">Project Objective:</span><br><br>
             <span class="objective-description">Our objective was to explore the use of Electron and the web technology stack for rapid, cross-platform application development. In this project, we successfully built a responsive client capable of communicating with a server via asynchronous HTTP calls. Additionally, we developed a secure server application using Node.js and Express.<br/>Looking ahead, TechRAT engineers can leverage these technologies to efficiently create and deploy cross-platform applications.<br/><br/></span>
         </div>
         <div class="intern-contribution">
-            <span class="contribution-text">Intern Contribution:</span>
+            <span class="contribution-text">Intern Contribution:</span><br><br>
             <span class="contribution-description">My tasks included but not limited to full stack development by building a sample application using Electron. Incorporating the principles of responsive design and best practices for web application security.</span>
         </div>
         <div class="full-stack-development">
@@ -26,7 +26,7 @@
         <div class="starting-up-repository">
             <img class="Image3" style="width: 494px; height: 98px" src="public/images/image-3.png" /> 
             <br></br>
-            <span class="starting-up-repository-text">Starting Up Repository</span>
+            <span class="starting-up-repository-text">Starting Up Repository</span><br>
             <span class="starting-up-repository-description">We started a GitHub repository to help keep track of tutorial materials and for future use as a digital portfolio to host code samples for potential employers.</span>
         </div>
         <div class="node-jc">
@@ -50,10 +50,15 @@
               <img class="Image13" style="width: 206.43px; height: 73.62px" src="public/images/image-13.png">
                 <br>
                 <br>
+                <br>
               <img class="Image14" style="width: 155.18px; height: 158.07px" src="public/images/image-14.png">
-
+<br>
               <span class="npm-library-description">Electron helps us develop cross-platform applications by using existing web technologies, because all the platforms support web technologies. Electron helps in developing cross-platform apps easier.</span>
             </div>
+          </div>
+          <div class="EnsuringScaleAndAspectRatios">
+            <p class="objective-text">Ensuring scale and aspect ratios...</p>
+            <p class="objective-description">I focused on ensuring the application's optimal appearance across various devices including phones, tablets, monitors, and smartwatches through responsive design implementation.</p>
           </div>
             </ul>
         </div>
