Adding more lines of code

--- a/Projects.html
+++ b/Projects.html
@@ -3,18 +3,25 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Projects</title>
     <link rel="stylesheet" href="Projects.css">
 </head>
 <body>
+
     <div class="container">
         <div class="background"></div>
         <div class="project-objective">
             <span class="objective-text">Project Objective:</span><br><br>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M20 10L0 10" stroke="white"/>
+              </svg>
             <span class="objective-description">Our objective was to explore the use of Electron and the web technology stack for rapid, cross-platform application development. In this project, we successfully built a responsive client capable of communicating with a server via asynchronous HTTP calls. Additionally, we developed a secure server application using Node.js and Express.<br/>Looking ahead, TechRAT engineers can leverage these technologies to efficiently create and deploy cross-platform applications.<br/><br/></span>
         </div>
         <div class="intern-contribution">
             <span class="contribution-text">Intern Contribution:</span><br><br>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M20 10L0 10" stroke="white"/>
+              </svg>
             <span class="contribution-description">My tasks included but not limited to full stack development by building a sample application using Electron. Incorporating the principles of responsive design and best practices for web application security.</span>
         </div>
         <div class="full-stack-development">
@@ -27,11 +34,17 @@
             <img class="Image3" style="width: 494px; height: 98px" src="public/images/image-3.png" /> 
             <br></br>
             <span class="starting-up-repository-text">Starting Up Repository</span><br>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M20 10L0 10" stroke="white"/>
+              </svg>
             <span class="starting-up-repository-description">We started a GitHub repository to help keep track of tutorial materials and for future use as a digital portfolio to host code samples for potential employers.</span>
         </div>
         <div class="node-jc">
             <img class="Image4" style="width: 260px; height: 260px" src="public/images/image-5.png">
             <span class="node-text">Node.jc</span><br></br>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M20 10L0 10" stroke="white"/>
+              </svg>
             <span class="node-description">This was the start of our server-side application. We used Node and its built-in library to perform native filesystem operations. We used another built-in library to ensure that all file paths were constructed to work on the host operating system with no conditional logic.</span>
         </div>
 
@@ -40,11 +53,17 @@
             <br>
             <span class="npm-text">Node Package Manager</span>
             <br></br>
+            <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+              <path d="M20 10L0 10" stroke="white"/>
+              </svg>
             <span class="description">NPM stands for Node Package Manager. It is a package manager for the Node JavaScript platform. NPM is known as the worlds largest software registry. Open-source developers all over the world use NPM to publish and share their source code. NPM consists of three components:</span>
           </div>
 
           <div class="npm-libraries">
             <div class="npm-library-container">
+              <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+                <path d="M20 10L0 10" stroke="white"/>
+                </svg>
               <span class="npm-library-title">Some of NPM Libraries I used<br/></span>
               <img class="Image12" style="width: 206.43px; height: 73.62px" src="public/images/image-12.png">
               <img class="Image13" style="width: 206.43px; height: 73.62px" src="public/images/image-13.png">
@@ -52,7 +71,10 @@
                 <br>
                 <br>
               <img class="Image14" style="width: 155.18px; height: 158.07px" src="public/images/image-14.png">
-<br>
+                <br>
+          <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
+          <path d="M20 10L0 10" stroke="white"/>
+          </svg>
               <span class="npm-library-description">Electron helps us develop cross-platform applications by using existing web technologies, because all the platforms support web technologies. Electron helps in developing cross-platform apps easier.</span>
             </div>
           </div>
@@ -60,7 +82,23 @@
             <p class="objective-text">Ensuring scale and aspect ratios...</p>
             <p class="objective-description">I focused on ensuring the application's optimal appearance across various devices including phones, tablets, monitors, and smartwatches through responsive design implementation.</p>
           </div>
-            </ul>
+
+          <div class="PuttingItAllTogether">Putting It All Together...<br>
+            <span class="descriptio"><br>
+              <span style="display: list-item; margin-left: 1em;">Created an Electron based application designed to send and receive messages from a server and display that information to the user.</span><br/>
+              <span style="display: list-item; margin-left: 1em;">Used Electron’s inter-process messaging system for communication between the main thread and the render thread.</span><br/>
+              <span style="display: list-item; margin-left: 1em;">Built a responsive interface using CSS.</span><br/>
+              <span style="display: list-item; margin-left: 1em;">Used NPM for dependency management.</span><br/>
+              <span style="display: list-item; margin-left: 1em;">Used Axios to make asynchronous HTTP POST requests to a server.</span><br/>
+              <span style="display: list-item; margin-left: 1em;">Used Javascript to dynamically update UI.</span><br/>
+              <span style="display: list-item; margin-left: 1em;">Used Git for source control.</span><br>
+              <span style="display: list-item; margin-left: 1em;">Used Node as the application framework</span><br>
+              <span style="display: list-item; margin-left: 1em;">Implemented a simple Express server to listen for a respond to messages</span><br>
+              <span style="display: list-item; margin-left: 1em;">Used NPM for dependency management</span><br>
+              <span style="display: list-item; margin-left: 1em;">UsedGit for source control</span><br>
+            </span>
+          </div>
+    </div>
         </div>
     </div>
 </body>
