--- a/Projects.html
+++ b/Projects.html
@@ -8,6 +8,14 @@
 </head>
 <body>
 
+  <nav class="CTA">
+    <ul style="list-style: none;">
+      <li><a href="index.html">Home</a></li>
+      <li><a href="Projects.html">My Projects</a></li>
+      <li><a href="#about-me">Missions and Visions</a></li>
+      <li><a href="#contact">Contact</a></li>
+    </ul>
+  </nav>
     <div class="container">
         <div class="background"></div>
         <div class="project-objective">
@@ -50,7 +58,7 @@
         </div>
         <div class="node-jc">
             <img class="Image4" style="width: 260px; height: 260px" src="public/images/image-5.png">
-            <span class="node-text">Node.jc</span><br></br>
+            <span class="node-text">Node.js</span><br></br>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
               <path d="M20 10L0 10" stroke="white"/>
               </svg>
@@ -81,6 +89,7 @@
                 <br>
               <img class="Image14" style="width: 155.18px; height: 158.07px" src="public/images/image-14.png">
                 <br>
+              <!--This SVG is the Horizontal line next to the texts  -->
           <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
           <path d="M20 10L0 10" stroke="white"/>
           </svg>
@@ -105,15 +114,28 @@
               <span style="display: list-item; margin-left: 1em;">Implemented a simple Express server to listen for a respond to messages</span><br>
               <span style="display: list-item; margin-left: 1em;">Used NPM for dependency management</span><br>
               <span style="display: list-item; margin-left: 1em;">UsedGit for source control</span><br>
+              <!--This SVG is the Horizontal line dividing the project  -->
               <svg xmlns="http://www.w3.org/2000/svg" width="1654" height="2" viewBox="0 0 1654 2" fill="none">
                 <path d="M0 1H1654" stroke="white" stroke-width="2"/>
               </svg>
             </span>
+
           </div>
-         
-        </div>
+
+          <div class="WhatITookFromThisExperience">
+            <span class="objective-text">What I took from this experience</span><br><br>
+            <img class="Image7" style="width: 219px; height: 227px" src="public/images/nawcad-feature-1.png"><br>
+
+            <span class="objective-description">I am proud of what I accomplished. Going from knowing nothing about full stack development to building a functioning client and server application in under 10 weeks was an amazing experience.<br/>This internship was invaluable because I had the chance to meet great people and amazing mentors. I gained essential knowledge of teamwork and coding through engaging development tasks. These skills will benefit me throughout my career.<br/><br/>Special thanks to TechRAT Lab for providing this valuable opportunity.</span><br>
+            <img class="Image7" style="width: 433px; height: 133px" src="public/images/image-1.png">
+            <img class="Image7" style="width: 433px; height: 133px" src="public/images/image-2.png">
+
+
+          </div>
     </div>
         </div>
+
     </div>
+
 </body>
 </html>
