Next Project Starting now

--- a/Projects.html
+++ b/Projects.html
@@ -11,13 +11,16 @@
   <nav class="CTA">
     <ul style="list-style: none;">
       <li><a href="index.html">Home</a></li>
-      <li><a href="Projects.html">My Projects</a></li>
+      <ul>
+        <li><a href="Projects.html">My Project 1</a></li>
+        <li><a href="Projects2.html">My Project 2</a></li>
+      </ul>
       <li><a href="#about-me">Missions and Visions</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
     <div class="container">
-        <div class="background"></div>
+        <div class="background">
         <div class="project-objective">
             <span class="objective-text">Project Objective:</span><br><br>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
@@ -129,13 +132,12 @@
             <span class="objective-description">I am proud of what I accomplished. Going from knowing nothing about full stack development to building a functioning client and server application in under 10 weeks was an amazing experience.<br/>This internship was invaluable because I had the chance to meet great people and amazing mentors. I gained essential knowledge of teamwork and coding through engaging development tasks. These skills will benefit me throughout my career.<br/><br/>Special thanks to TechRAT Lab for providing this valuable opportunity.</span><br>
             <img class="Image7" style="width: 433px; height: 133px" src="public/images/image-1.png">
             <img class="Image7" style="width: 433px; height: 133px" src="public/images/image-2.png">
-
-
           </div>
+       
     </div>
         </div>
-
+     
     </div>
-
+ 
 </body>
 </html>
