--- a/index.html
+++ b/index.html
@@ -28,7 +28,10 @@
     <nav class="CTA">
         <ul style="list-style: none;">
           <li><a href="index.html">Home</a></li>
-          <li><a href="Projects.html">My Projects</a></li>
+          <ul>
+          <li><a href="Projects.html">My Project 1</a></li>
+          <li><a href="Projects2.html">My Project 2</a></li>
+        </ul>
           <li><a href="#about-me">Missions and Visions</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
