--- a/Projects2.html
+++ b/Projects2.html
@@ -7,6 +7,18 @@
     <title>Project 2</title>
 </head>
 <body>
+    <nav class="CTA">
+        <ul style="list-style: none;">
+          <li><a href="index.html">Home</a></li>
+          <ul>
+            <li><a href="Projects.html">My Project 1</a></li>
+            <li><a href="Projects2.html">My Project 2</a></li>
+          </ul>
+          <li><a href="#about-me">Missions and Visions</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
+      
     <div class="Proyecto2" >
         <div class="ProjectObjectives" >
             <span class="project">Project Objective:<br/><br/></span>
@@ -30,14 +42,14 @@
         </div>
         <img class="Image21" style="width: 570px; height: 355px; left: 33px; top: 1948px; position: absolute"  src="public/images/image-21.png" />
         <img class="Image22" style="width: 519px; height: 326px; left: 33px; top: 2328px; position: absolute" src="public/images/image-22.png" />
-        <div class="Vector4" style="width: 1654px; height: 0px; left: 243px; top: 1653px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 243px; top: 2699px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector6" style="width: 1654px; height: 0px; left: 243px; top: 4597px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector4" style="width: 1654px; height: 0px; left: 200px; top: 1653px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 200px; top: 2699px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector6" style="width: 1654px; height: 0px; left: 200px; top: 4597px; position: absolute; border: 2px white solid"></div>
         <div class="PolytechnicUniversity">Polytechnic University Of Puerto Rico(OC)</div>
         <div class="StudentSystem">Student System Management Project<br/></div>
         <div class="WorkedWithLucidchart">Worked with LucidChart</div>
         <img class="UniversidadPolitecnica011" style="width: 323px; height: 323px; left: 1496px; top: 238px; position: absolute" src="public/images/universidad-politecnica-011.png" />
-        <img class="Image24" style="width: 1137px; height: 746px; left: 958px; top: 2763px; position: absolute" src="public/images/image-24.png" />
+        <img class="Image24" style="width: 1000px; height: 646px; left: 858px; top: 2763px; position: absolute" src="public/images/image-24.png" />
         <img class="Image20" style="width: 843px; height: 991px; left: 33px; top: 3534px; position: absolute" src="public/images/image-20.png" />
         <div class="InThisClassDiagrams">
         In this class diagrams I’m going to show my last decision made by the team.<br/>
@@ -51,7 +63,7 @@
             <span style="display: list-item; margin-left: 1em;">Login Implementation (Will have the Codes on GitHub)<br/><br/> <br/></span>
         </div>
 
-        <img class="Image26" style="width: 975px; height: 382px; left: 942px; top: 5334px; position: absolute" src="public/images/image-26.png" />
+        <img class="Image26" style="width: 900px; height: 382px; left: 942px; top: 5334px; position: absolute" src="public/images/image-26.png" />
 
         <div class="Authentication"><span style="display: list-item; margin-left: 1em;">Authentication added for protection</span></div>
       
@@ -65,16 +77,16 @@
 
         <div class="InTotal"><span style="display: list-item; margin-left: 1em;">In total I worked with 6 TABLES saving different information and saving: videos, images, and more... for each user accounts</span></div>
 
-        <img class="Image29" style="width: 270px; height: 295px; left: 1647px; top: 7582px; position: absolute" src="public/images/image-29.png" />
-        <div class="Vector7" style="width: 1654px; height: 0px; left: 243px; top: 6482px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 243px; top: 8020px; position: absolute; border: 2px white solid"></div>
+        <img class="Image29" style="width: 270px; height: 295px; left: 1550px; top: 7582px; position: absolute" src="public/images/image-29.png" />
+        <div class="Vector7" style="width: 1654px; height: 0px; left: 200px; top: 6482px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 200px; top: 8020px; position: absolute; border: 2px white solid"></div>
         <div class="Results">Results: </div>
         <img class="Image30" style="width: 621px; height: 902px; left: 243px; top: 8146px; position: absolute" src="public/images/image-30.png" />
-        <img class="Image31" style="width: 622px; height: 578px; left: 1201px; top: 8498px; position: absolute" src="public/images/image-31.png" />
-        <img class="Image32" style="width: 1459px; height: 705px; left: 323px; top: 9122px; position: absolute" src="public/images/image-32.png" />
+        <img class="Image31" style="width: 622px; height: 578px; left: 1000px; top: 8498px; position: absolute" src="public/images/image-31.png" />
+        <img class="Image32" style="width: 1150px; height: 705px; left: 323px; top: 9122px; position: absolute" src="public/images/image-32.png" />
         <img class="Image33" style="width: 699px; height: 859px; left: 27px; top: 9944px; position: absolute" src="public/images/image-33.png" />
         <img class="Image34" style="width: 605px; height: 829px; left: 768px; top: 9974px; position: absolute" src="public/images/image-34.png" />
-        <img class="Image35" style="width: 655px; height: 742px; left: 1415px; top: 10061px; position: absolute" src="public/images/image-35.png" />
+        <img class="Image35" style="width: 500px; height: 742px; left: 1380px; top: 10061px; position: absolute" src="public/images/image-35.png" />
       </div>
 </body>
 </html>
