Fixing Nav and added Mission and vision

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-    <div class="container">WELCOME!!<br/></div>
+    <div class="container">WELCOME<br/></div>
 
     <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS<br></div>
 
@@ -32,7 +32,7 @@
           <li><a href="Projects.html">My Project 1</a></li>
           <li><a href="Projects2.html">My Project 2</a></li>
         </ul>
-          <li><a href="#about-me">Missions and Visions</a></li>
+          <li><a href="MissionAndVision.html">Missions and Visions</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
