--- a/Projects.html
+++ b/Projects.html
@@ -9,18 +9,19 @@
 <body>
 
   <nav class="CTA">
-    <ul style="list-style: none;">
+    <ul class="nav__links">
       <li><a href="index.html">Home</a></li>
-      <ul>
-        <li><a href="Projects.html">My Project 1</a></li>
-        <li><a href="Projects2.html">My Project 2</a></li>
-      </ul>
-      <li><a href="#about-me">Missions and Visions</a></li>
+      <li><a href="Projects.html">My Project 1</a></li>
+      <li><a href="Projects2.html">My Project 2</a></li>
+      <li><a href="MissionAndVision.html">Missions and Visions</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
   </nav>
+
     <div class="container">
         <div class="background">
+          <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 0px; position: absolute; border: 2px white solid"></div>
+
         <div class="project-objective">
             <span class="objective-text">Project Objective:</span><br><br>
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 20 20" fill="none">
