--- a/Projects2.html
+++ b/Projects2.html
@@ -8,16 +8,16 @@
 </head>
 <body>
     <nav class="CTA">
-        <ul style="list-style: none;">
+        <ul class="nav__links">
           <li><a href="index.html">Home</a></li>
-          <ul>
-            <li><a href="Projects.html">My Project 1</a></li>
-            <li><a href="Projects2.html">My Project 2</a></li>
-          </ul>
-          <li><a href="#about-me">Missions and Visions</a></li>
+          <li><a href="Projects.html">My Project 1</a></li>
+          <li><a href="Projects2.html">My Project 2</a></li>
+          <li><a href="MissionAndVision.html">Missions and Visions</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
+      <div class="Vector7" style="width: 1654px; height: 0px; left: 30px; top: 100px; position: absolute; border: 2px white solid"></div>
+
       
     <div class="Proyecto2" >
         <div class="ProjectObjectives" >
@@ -42,9 +42,9 @@
         </div>
         <img class="Image21" style="width: 570px; height: 355px; left: 33px; top: 1948px; position: absolute"  src="public/images/image-21.png" />
         <img class="Image22" style="width: 519px; height: 326px; left: 33px; top: 2328px; position: absolute" src="public/images/image-22.png" />
-        <div class="Vector4" style="width: 1654px; height: 0px; left: 200px; top: 1653px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 200px; top: 2699px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector6" style="width: 1654px; height: 0px; left: 200px; top: 4597px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector4" style="width: 1654px; height: 0px; left: 150px; top: 1653px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 150px; top: 2699px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector6" style="width: 1654px; height: 0px; left: 150px; top: 4597px; position: absolute; border: 2px white solid"></div>
         <div class="PolytechnicUniversity">Polytechnic University Of Puerto Rico(OC)</div>
         <div class="StudentSystem">Student System Management Project<br/></div>
         <div class="WorkedWithLucidchart">Worked with LucidChart</div>
@@ -78,8 +78,8 @@
         <div class="InTotal"><span style="display: list-item; margin-left: 1em;">In total I worked with 6 TABLES saving different information and saving: videos, images, and more... for each user accounts</span></div>
 
         <img class="Image29" style="width: 270px; height: 295px; left: 1550px; top: 7582px; position: absolute" src="public/images/image-29.png" />
-        <div class="Vector7" style="width: 1654px; height: 0px; left: 200px; top: 6482px; position: absolute; border: 2px white solid"></div>
-        <div class="Vector5" style="width: 1654px; height: 0px; left: 200px; top: 8020px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector7" style="width: 1654px; height: 0px; left: 150px; top: 6482px; position: absolute; border: 2px white solid"></div>
+        <div class="Vector5" style="width: 1654px; height: 0px; left: 150px; top: 8020px; position: absolute; border: 2px white solid"></div>
         <div class="Results">Results: </div>
         <img class="Image30" style="width: 621px; height: 902px; left: 243px; top: 8146px; position: absolute" src="public/images/image-30.png" />
         <img class="Image31" style="width: 622px; height: 578px; left: 1000px; top: 8498px; position: absolute" src="public/images/image-31.png" />
