--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
     </div>
 
     <nav class="CTA">
-        <ul style="list-style: none;">
-          <li><a href="index.html">Home</a></li>
-          <ul>
-          <li><a href="Projects.html">My Project 1</a></li>
-          <li><a href="Projects2.html">My Project 2</a></li>
-        </ul>
-          <li><a href="MissionAndVision.html">Missions and Visions</a></li>
-          <li><a href="#contact">Contact</a></li>
-        </ul>
-      </nav>
+      <ul class="nav__links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="Projects.html">My Project 1</a></li>
+        <li><a href="Projects2.html">My Project 2</a></li>
+        <li><a href="MissionAndVision.html">Missions and Visions</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
 </body>
 </html>
