--- a/MissionAndVision.html
+++ b/MissionAndVision.html
@@ -18,9 +18,18 @@
           <li><a href="#contact">Contact</a></li>
         </ul>
       </nav>
-      <div class="Vector7" style="width: 1654px; height: 0px; left: 30px; top: 100px; position: absolute; border: 2px white solid"></div>
 
+      <div class="Vector7" style="width: 1850px; height: 0 px; left: 20px; top: 70px; position: absolute; border: 2px white solid"></div>
 
+      <div class="AboutMe"> 
+        <div class="BackgrountBaseColor" ></div>
+        <div class="Vision">Vision:<br/><svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 20 20" fill="none">
+          <path d="M20 10L0 10" stroke="white"/>
+      </svg>To leverage my programming skills and problem-solving abilities to create innovative solutions that enhance user experiences and drive technological advancements, while continuously learning and growing in the field of computer science.<br/></div>
+        <div class="Mission" >Mission:<br/><svg xmlns="http://www.w3.org/2000/svg" width="10" height="18" viewBox="0 0 20 20" fill="none">
+          <path d="M20 10L0 10" stroke="white"/>
+      </svg>To utilize my expertise in full stack development, web application security, and responsive design to deliver high-quality, efficient, and secure software solutions. I am committed to working collaboratively in diverse teams, adapting to new challenges, and contributing to projects that align with strategic goals and benefit the community.</div>
+      </div>
 
 </body>
 </html>
