Finishing my project

--- a/Projects.html
+++ b/Projects.html
@@ -14,7 +14,7 @@
       <li><a href="Projects.html">My Project 1</a></li>
       <li><a href="Projects2.html">My Project 2</a></li>
       <li><a href="MissionAndVision.html">Missions and Visions</a></li>
-      <li><a href="#contact">Contact</a></li>
+      <li><a href="Contact.html">Contact</a></li>
     </ul>
   </nav>
 
