--- a/Projects2.html
+++ b/Projects2.html
@@ -13,7 +13,7 @@
           <li><a href="Projects.html">My Project 1</a></li>
           <li><a href="Projects2.html">My Project 2</a></li>
           <li><a href="MissionAndVision.html">Missions and Visions</a></li>
-          <li><a href="#contact">Contact</a></li>
+          <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
       <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 71px; position: absolute; border: 2px white solid"></div>
