--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <path d="M20 10L0 10" stroke="white"/>
         </svg>
         Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.
+        When I'm not coding, I enjoy exercising, playing video games, and watching anime.
     </div>
 
     <nav class="CTA">
@@ -31,7 +32,7 @@
         <li><a href="Projects.html">My Project 1</a></li>
         <li><a href="Projects2.html">My Project 2</a></li>
         <li><a href="MissionAndVision.html">Missions and Visions</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
     </nav>
 </body>
