--- a/Contact.html
+++ b/Contact.html
@@ -14,7 +14,7 @@
   
 <div class = "Contact-Me">
   <h1>Contact Me</h1>
-  <p>Whether you have a project idea, a job opportunity, or just want to chat, feel free to reach out through the contact details below!</p>
+  <p>Whether you have a job opportunity or looking to hire please feel free to reach out through the contact details below!</p>
 </div>
 <div class="Vector7" style="width: 870px; height: 0 px; left: 20px; top: 460x; position: absolute; border: 2px white solid"></div>
 <br>
