--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <path d="M20 10L0 10" stroke="white"/>
         </svg>
         Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.
-        When I'm not coding, I enjoy exercising, playing video games, and watching anime.
+        When I'm not coding, I enjoy exercising, Spending time with family and friends,  playing video games, and watching anime.
     </div>
 
     <nav class="CTA">
