More changes comung UP

--- a/Projects.html
+++ b/Projects.html
@@ -11,8 +11,8 @@
   <nav class="CTA">
     <ul class="nav__links">
       <li><a href="index.html">Home</a></li>
-      <li><a href="Projects.html">My Project 1</a></li>
-      <li><a href="Projects2.html">My Project 2</a></li>
+      <li><a href="Projects.html">Project 1</a></li>
+      <li><a href="Projects2.html">Project 2</a></li>
       <li><a href="MissionAndVision.html">Missions and Visions</a></li>
       <li><a href="Contact.html">Contact</a></li>
     </ul>
