finished on NPM

--- a/Proyecto 1.2.html
+++ b/Proyecto 1.2.html
@@ -31,11 +31,15 @@
         <div class="NodeJs">
             <span class ="NodeJsDs"><br/></span>
             <span class ="NodeJsDes">Node.js<br/></span>
-            <span class ="NodeJsText">This was the start of our server-side application. We used Node and its built-in library to perform native filesystem operations. We used another built-in library to ensure that all file paths were constructed to work on the host operating system with no conditional logic.</span></div>
+            <span class ="NodeJsText">This was the start of our server-side application. We used Node and its built-in library to perform native filesystem operations. We used another built-in library to ensure that all file paths were constructed to work on the host operating system with no conditional logic.</span>
+        </div>
         <img class="Image3" style="width: 494px; height: 98px; left: 133px; top: 858px; position: absolute" src="https://via.placeholder.com/494x98" />
         <img class="Image5" style="width: 260px; height: 260px; left: 970px; top: 950px; position: absolute" src="https://via.placeholder.com/260x260" />
         <img class="Image7" style="width: 233px; height: 162px; left: 1603px; top: 1261px; position: absolute" src="https://via.placeholder.com/233x162" />
-        <div class="NodePackage" ><span style="color: white; font-size: 40px; font-family: Modern Sans; font-weight: 500; word-wrap: break-word">Node Package Manager<br/></span><span style="color: white; font-size: 27px; font-family: Modern Sans; font-weight: 500; word-wrap: break-word">NPM stands for Node Package Manager. It is a package manager for the Node JavaScript platform. NPM is known as the world’s largest software registry. Open-source developers all over the world use NPM to publish and share their source code. NPM consists of three components:<br/>•The website  allows you to find third-party packages, set up profiles, and manage your packages.<br/>•The command-line interface or NPM CLI that runs from a terminal to allow you to interact with NPM.<br/>•The registry is a large public database of JavaScript code.</span></div>
+
+        <div class="NodePackage" >
+            <span class="NodePackageDes">Node Package Manager<br/></span>
+            <span class ="NodePackageText">NPM stands for Node Package Manager. It is a package manager for the Node JavaScript platform. NPM is known as the world’s largest software registry. Open-source developers all over the world use NPM to publish and share their source code. NPM consists of three components:<br/>•The website  allows you to find third-party packages, set up profiles, and manage your packages.<br/>•The command-line interface or NPM CLI that runs from a terminal to allow you to interact with NPM.<br/>•The registry is a large public database of JavaScript code.</span></div>
         <div class="Vector4" style="width: 1654px; height: 0px; left: 133px; top: 757px; position: absolute; border: 2px white solid"></div>
         <div class="Vector6" style="width: 168.01px; height: 0px; left: 135px; top: 994px; position: absolute; transform: rotate(90.68deg); transform-origin: 0 0; border: 1px white solid"></div>
         <div class="Vector9" style="width: 168.01px; height: 0px; left: 121px; top: 1706px; position: absolute; transform: rotate(90.68deg); transform-origin: 0 0; border: 1px white solid"></div>
