Finished Project 1 file

--- a/Contact.html
+++ b/Contact.html
@@ -26,7 +26,7 @@
     <p><strong>GitHub:</strong> <a href="https://github.com/BradleyAcosta" target="_blank">Bradley's GitHub</a></p>
   
 
-  <p>Thank you for visiting my page. I'm looking forward to connecting with you!</p>
+  <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
   </div>
 
   <nav class="CTA">
