Working on Grain Background and Offset Animation

--- a/Projects.html
+++ b/Projects.html
@@ -27,7 +27,7 @@
             <span class="ProjectObjectiveDes">Project Objective:<br/></span>
             <span class="ProjectObjectiveText">Our objective was to explore the use of Electron and the web technology stack for rapid, cross-platform application development. In this project, we successfully built a responsive client capable of communicating with a server via asynchronous HTTP calls. Additionally, we developed a secure server application using Node.js and Express.<br/>Looking ahead, TechRAT engineers can leverage these technologies to efficiently create and deploy cross-platform applications.<br/><br/></span>
         </div>
-        <div class="InternContribution">
+        <div class="InternContribution offset">
             <span class="InternContributionD"><br/></span>
             <span class="InternContributionDes">Intern Contribution:<br/></span>
             <span class="InternContributionText">My tasks included but not limited to full stack development by building a sample application using Electron. Incorporating the principles of responsive design and best practices for web application security.</span>
