--- a/Projects.html
+++ b/Projects.html
@@ -23,6 +23,7 @@
 
     <div class="Proyect1Slide1">
         <div class="BackgrountBaseColor"> 
+            <div class="grain-background">
         <div class="ProjectOBJ" >
             <span class="ProjectObjectiveDes">Project Objective:<br/></span>
             <span class="ProjectObjectiveText">Our objective was to explore the use of Electron and the web technology stack for rapid, cross-platform application development. In this project, we successfully built a responsive client capable of communicating with a server via asynchronous HTTP calls. Additionally, we developed a secure server application using Node.js and Express.<br/>Looking ahead, TechRAT engineers can leverage these technologies to efficiently create and deploy cross-platform applications.<br/><br/></span>
@@ -96,6 +97,7 @@
         </div>
       </div>
     </div>
+      </div>
 
 
       
