--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 </head>
 <body>
 
-    <div class="container">WELCOME<br/></div>
+    <div class="container"> 
+      <img class="Image3" style="width: 494px; height: 500px; right: 133px; top: 100px; position: absolute" src="public/images/BA LOGO.jpg" />
+      </div>
 
     <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS<br></div>
 
