--- a/Contact.html
+++ b/Contact.html
@@ -10,7 +10,10 @@
   
 </head>
 <body>
+  
    
+
+
   
 <div class = "Contact-Me">
   <h1>Contact Me</h1>
@@ -24,6 +27,8 @@
     <p><strong>Phone:</strong> 407-881-9438</p>
     <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/bradley-acosta-382613179/" target="_blank">Bradley's LinkedIn</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/BradleyAcosta" target="_blank">Bradley's GitHub</a></p>
+    <p><strong>Resume:</strong> <a href="Bradley Acosta Rojas Resume 2024 (CS Graduate).pdf" download> Check me out!</a></p>
+
   
 
   <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
@@ -31,7 +36,6 @@
 
   <nav class="CTA">
     <ul class="nav__links">
-      <li><a href="index.html">Home</a></li>
       <li><a href="Projects.html">Project 1</a></li>
       <li><a href="Projects2.html">Project 2</a></li>
       <li><a href="MissionAndVision.html">Missions and Visions</a></li>
@@ -39,7 +43,11 @@
     </ul>
   </nav>
 
-      
+  <div class="Image1"  style="width: 369px; height: 170.14px; padding: 2px; left: 1444px; top: 205px; position: absolute; background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) 0%, rgba(102, 102, 102, 0.25) 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); flex-direction: column; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex" >
+
+    <a href="index.html">
+      <img class="Image7" style="width: 369px; height: 170.14px; left: 2px; top: 2px; position: absolute" src="public/images/Logo.png">
+  </a>
 
 </body>
 </html>
