--- a/Projects2.html
+++ b/Projects2.html
@@ -9,7 +9,9 @@
 <body>
     <nav class="CTA">
         <ul class="nav__links">
-          <li><a href="index.html">Home</a></li>
+            <a href="index.html">
+                <img class="Image7" style="width: 75px; height: 40px; left: 1800px; top: 15px; position: absolute" src="public/images/Logo.png">
+            </a>          
           <li><a href="Projects.html">Project 1</a></li>
           <li><a href="Projects2.html">Project 2</a></li>
           <li><a href="MissionAndVision.html">Missions and Visions</a></li>
