--- a/Projects2.html
+++ b/Projects2.html
@@ -7,17 +7,21 @@
     <title>Project 2</title>
 </head>
 <body>
-    <nav class="CTA">
-        <ul class="nav__links">
-            <a href="index.html">
-                <img class="Image7" style="width: 75px; height: 40px; left: 1800px; top: 15px; position: absolute" src="public/images/Logo.png">
-            </a>          
-          <li><a href="Projects.html">Project 1</a></li>
-          <li><a href="Projects2.html">Project 2</a></li>
-          <li><a href="MissionAndVision.html">Missions and Visions</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
-      </nav>
+    <header class="header">
+        <nav class="CTA">
+            <ul class="nav__links">
+                <a href="index.html">
+                    <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png">
+                    <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px white solid"></div>
+    
+                </a>
+                <li><a href="Projects.html">Project 1</a></li>
+                <li><a href="Projects2.html">Project 2</a></li>
+                <li><a href="MissionAndVision.html">Missions and Visions</a></li>
+                <li><a href="Contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
       <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 71px; position: absolute; border: 2px white solid"></div>
 
       
