--- a/About.html
+++ b/About.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mission and Vision</title>
-    <link rel="stylesheet" type="text/css" href="MissionAndVision.css" />
+    <link rel="stylesheet" type="text/css" href="About.css" />
 
 </head>
 <body>
@@ -14,7 +14,7 @@
           <li><a href="index.html">Home</a></li>
           <li><a href="Projects.html">Project 1</a></li>
           <li><a href="Projects2.html">Project 2</a></li>
-          <li><a href="MissionAndVision.html">Missions and Visions</a></li>
+          <li><a href="About.html">About</a></li>
           <li><a href="Contact.html">Contact</a></li>
         </ul>
       </nav>
