--- a/Projects2.html
+++ b/Projects2.html
@@ -17,7 +17,7 @@
                 </a>
                 <li><a href="Projects.html">Project 1</a></li>
                 <li><a href="Projects2.html">Project 2</a></li>
-                <li><a href="MissionAndVision.html">Missions and Visions</a></li>
+                <li><a href="About.html">About</a></li>
                 <li><a href="Contact.html">Contact</a></li>
             </ul>
         </nav>
