--- a/About.html
+++ b/About.html
@@ -29,7 +29,8 @@
         <p>Hello! My name is <strong>Bradley Acosta Rojas</strong>, and I'm a dedicated <strong> Computer Science</strong> major with a passion for coding and teamwork. I thrive on organizing tasks efficiently and believe that every mistake is an opportunity to learn and grow.</p>
         
         <h2>My Journey</h2>
-        <p>I have had the opportunity to work with <strong>TECHRAT LAB</strong>, where I honed my skills in Git/GitHub, JavaScript, and file management. During this time, <strong> I created an application using Node.js, NPM, HTML, CSS, and Electron</strong>. This project allowed me to focus on full stack development, responsive design, and web application security. <em> built a responsive client for server communication and a secure server using Node and Express</em>.</p>
+        <p>I have had the opportunity to work with <strong>TECHRAT LAB</strong>, where I honed my skills in Git/GitHub, JavaScript, and file management. During this time, <strong> I created an application using Node.js, NPM, HTML, CSS, and Electron</strong>. This project allowed me to focus on full stack development, responsive design, and web application security. 
+          <em> built a responsive client for server communication and a secure server using Node and Express</em>.</p>
         
         <h2>Interests</h2>
         <p>When I'm not coding, you can find me indulging in some of my favorite hobbies: exercising, playing video games, and watching anime. These activities help me stay balanced and energized.</p>
