--- a/About.html
+++ b/About.html
@@ -9,17 +9,23 @@
 </head>
 <body>
 
+  <header class="header">
     <nav class="CTA">
         <ul class="nav__links">
-          <li><a href="index.html">Home</a></li>
-          <li><a href="Projects.html">Project 1</a></li>
-          <li><a href="Projects2.html">Project 2</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
-      </nav>
+            <a href="index.html">
+                <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png">
+                <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px white solid"></div>
 
-      <div class="Vector7" style="width: 1850px; height: 0 px; left: 20px; top: 70px; position: absolute; border: 2px white solid"></div>
+            </a>
+            <li><a href="Projects.html">Project 1</a></li>
+            <li><a href="Projects2.html">Project 2</a></li>
+            <li><a href="About.html">About</a></li>
+            <li><a href="Contact.html">Contact</a></li>
+        </ul>
+    </nav>
+</header>
+<br>
+<br><br>
 
 
 
