Fixed the purple line bug on My logo

--- a/Projects.html
+++ b/Projects.html
@@ -13,7 +13,7 @@
     <nav class="CTA">
         <ul class="nav__links">
             <a href="index.html">
-                <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png">
+                <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>
                 <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px white solid"></div>
 
             </a>
