--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="AboutMe">
         
 
-        <div class="BackgrountBaseColor">
+        <div class="BackgroundBaseColor">
             
         <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS</div>
         <div class="WebDeveloper" >WEB DEVELOPER</div>
