--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS</div>
         <div class="WebDeveloper" >WEB DEVELOPER</div>
         <div class="BradleyHi">Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.</div>
-        <div class="Vector2" style="width: 0px; height: 250px; left: 1141px; top: 468px; position: absolute; transform: rotate(90deg); transform-origin: 0 0; border: 1px white solid"></div>
-        <div class="Vector3" style="width: 0px; height: 281px; left: 171px; top: 821px; position: absolute; transform: rotate(-180deg); transform-origin: 0 0; border: 3px white solid"></div>
-        <div class="Image1"  style="width: 369px; height: 170.14px; padding: 2px; left: 1444px; top: 205px; position: absolute; background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) 0%, rgba(102, 102, 102, 0.25) 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); flex-direction: column; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex" >
+        <div class="Vector2" ></div>
+        <div class="Vector3" ></div>
+        
+        <div class="Image1">
             <a href="index.html">
-                <img class="Image7" style="width: 369px; height: 170.14px; left: 1px; top: 2px; position: absolute" src="public/images/Logo.png">
+                <img class="Image7" src="public/images/Logo.png">
             </a>
 
           <nav class="CTA">
