--- a/Contact.html
+++ b/Contact.html
@@ -43,8 +43,7 @@
     </ul>
   </nav>
 
-  <div class="Image1"  style="width: 369px; height: 170.14px; padding: 2px; left: 1444px; top: 205px; position: absolute; background: linear-gradient(180deg, rgba(0, 0, 0, 0.25) 0%, rgba(102, 102, 102, 0.25) 100%); box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); flex-direction: column; justify-content: flex-start; align-items: center; gap: 10px; display: inline-flex" >
-
+  <div class="Image1">
     <a href="index.html">
       <img class="Image7" style="width: 369px; height: 170.14px; left: 2px; top: 2px; position: absolute" src="public/images/Logo.png">
   </a>
