--- a/About.html
+++ b/About.html
@@ -40,7 +40,7 @@
         
         <h2>My Journey</h2>
         <p>I have had the opportunity to work with <strong>TECHRAT LAB</strong>, where I honed my skills in Git/GitHub, JavaScript, and file management. During this time, <strong> I created an application using Node.js, NPM, HTML, CSS, and Electron</strong>. This project allowed me to focus on full stack development, responsive design, and web application security. 
-          <em><strong>built a responsive client for server communication and a secure server using Node and Express</em></strong>.</p>
+          <em><strong>built a responsive client for server communication and a secure server using Node and Express</em></strong>. In addition to my experience in software development, I have developed a comprehensive set of IT Specialist skills in Systems Administration, including proficiency in operating systems like Windows and macOS, server management, network administration, security, backup and recovery, monitoring and performance tuning, user and access management, troubleshooting and support.</p>
         
         <h2>Interests</h2>
         <p>When I'm not coding, you can find me indulging in some of my favorite hobbies: <em><strong>exercising, spend time with family and friends, playing video games, and watching anime. These activities help me stay balanced and energized.</strong></em></p>
