Making logo move

--- a/Contact.html
+++ b/Contact.html
@@ -34,6 +34,13 @@
   <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
   </div>
 
+  <div class="Image1">
+    <a href="index.html">
+      <img class="Image7" style="width: 369px; height: 170.14px; left: 2px; top: 2px; position: absolute" src="public/images/Logo.png">
+  </a>
+  </div>
+
+
   <nav class="CTA">
     <ul class="nav__links">
       <li><a href="Projects.html">Project 1</a></li>
@@ -43,10 +50,6 @@
     </ul>
   </nav>
 
-  <div class="Image1">
-    <a href="index.html">
-      <img class="Image7" style="width: 369px; height: 170.14px; left: 2px; top: 2px; position: absolute" src="public/images/Logo.png">
-  </a>
 
 </body>
 </html>
