--- a/Projects.html
+++ b/Projects.html
@@ -78,9 +78,9 @@
           </div>
 
         <div class="ExperienceITook">
-            <span class = "ExperienceITookDs">What I took from this experience<br/></span>
+            <span class = "ExperienceITookDs">What I took from this experience<br/><br></span>
             <span class = "ExperienceITookDes "><br/></span>
-            <span class ="ExperienceITookText">I am proud of what I accomplished. Going from knowing nothing about full stack development to building a functioning client and server application in under 10 weeks was an amazing experience.<br/>This internship was invaluable because I had the chance to meet great people and amazing mentors. I gained essential knowledge of teamwork and coding through engaging development tasks. These skills will benefit me throughout my career.<br/><br/>Special thanks to TechRAT Lab for providing this valuable opportunity.</span>
+            <span class ="ExperienceITookText">I am proud of what I accomplished. Going from knowing nothing about full stack development to building a functioning client and server application in under 10 weeks was an amazing experience.<br/>This internship was invaluable because I had the chance to meet great people and amazing mentors. I gained essential knowledge of teamwork and coding through engaging development tasks. These skills will benefit me throughout my career.<br/><br/><br><br>Special thanks to TechRAT Lab for providing this valuable opportunity.</span>
         </div>
        
         <div class="EnsuringScale">
