Fixed Phones on Home and Contact

--- a/Contact.html
+++ b/Contact.html
@@ -11,32 +11,29 @@
 </head>
 <body>
   
-   
-
-
-  
+  <div class="BackgroundBaseColor">
 <div class = "Contact-Me">
   <h1>Contact Me</h1>
   <p>Whether you have a job opportunity or looking to hire please feel free to reach out through the contact details below!</p>
 </div>
-<div class="Vector7" style="width: 870px; height: 0 px; left: 20px; top: 460x; position: absolute; border: 2px white solid"></div>
+<div class="Vector7" ></div>
 <br>
 
   <div class="contact-info">
     <p><strong>Email:</strong> <a href="mailto:bradleyacosta00@outlook.com">bradleyacosta00@outlook.com</a></p>
-    <p><strong>Phone:</strong> 407-881-9438</p>
     <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/bradley-acosta-382613179/" target="_blank">Bradley's LinkedIn</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/BradleyAcosta" target="_blank">Bradley's GitHub</a></p>
     <p><strong>Resume:</strong> <a href="Bradley Acosta Rojas Resume 2024 (CS Graduate).pdf" download> Check me out!</a></p>
 
   
-
+<div class = "ThanksFor">
   <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
+</div>
   </div>
 
   <div class="Image1">
     <a href="index.html">
-      <img class="Image7" style="width: 369px; height: 170.14px; left: 2px; top: 2px; position: absolute" src="public/images/Logo.png">
+      <img class="Image7" src="public/images/Logo.png">
   </a>
   </div>
 
@@ -49,6 +46,7 @@
     </ul>
   </nav>
 
+  </div>
 
 
 </body>
