--- a/Contact.html
+++ b/Contact.html
@@ -12,10 +12,12 @@
 <body>
   
  
+  <div class = "ContactMe">
 
-<div class = "Contact-Me">
-  <h1>Contact Me</h1>
-  <p>Whether you have a job opportunity or looking to hire please feel free to reach out through the contact details below!</p>
+       <div class = "BackgroundBaseColor">
+
+  <div class = "ContactDes">Contact Me</div>
+  <div class = "ContactText">Whether you have a job opportunity or looking to hire please feel free to reach out through the contact details below!</div>
 <div class="Vector7" ></div>
 <br>
 
@@ -24,12 +26,10 @@
     <p><strong>LinkedIn:</strong> <a href="https://www.linkedin.com/in/bradley-acosta-382613179/" target="_blank">Bradley's LinkedIn</a></p>
     <p><strong>GitHub:</strong> <a href="https://github.com/BradleyAcosta" target="_blank">Bradley's GitHub</a></p>
     <p><strong>Resume:</strong> <a href="Bradley Acosta Rojas Resume 2024 (CS Graduate).pdf" download> Check me out!</a></p>
-
-  
-<div class = "ThanksFor">
-  <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
+ 
+   <p>Thank you for visiting my page. I'm looking forward to connect with you!</p>
 </div>
-  </div>
+
 
   <div class="Image1">
     <a href="index.html">
@@ -46,7 +46,7 @@
     </ul>
   </nav>
 </div>
-  
+</div>
 
 
 </body>
