--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
         <ul class="nav__links">
             <a href="index.html">
                 <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>
-                <div class="Vector7" style="width: 1850px; height: 0px; left: 20px; top: 92px; position: absolute; border: 2px white solid"></div>
+                <div class="Vector7" ></div>
 
             </a>
             <li><a href="Projects.html">Project 1</a></li>
@@ -48,7 +48,7 @@
         <h2>Future Goals</h2>
         <p>I am always looking for opportunities to enhance my skills and knowledge. My goal is to secure a software engineering, web developer or full stack developer role, where I can contribute to innovative projects and continue to grow as a professional.</p>
         
-        
+      </div>
 
 </body>
 </html>
