--- a/index.html
+++ b/index.html
@@ -37,5 +37,49 @@
         </div>
       </div>   
  
+
+      <script type="module">
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-app.js";
+        import { getAnalytics } from "https://www.gstatic.com/firebasejs/10.12.5/firebase-analytics.js";
+        // TODO: Add SDKs for Firebase products that you want to use
+        // https://firebase.google.com/docs/web/setup#available-libraries
+      
+        // Your web app's Firebase configuration
+        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+        const firebaseConfig = {
+          apiKey: "AIzaSyB1Cf5RkMEU_C2rlHGDw4dW-75nxlDO0rs",
+          authDomain: "bradleyacostatech.firebaseapp.com",
+          projectId: "bradleyacostatech",
+          storageBucket: "bradleyacostatech.appspot.com",
+          messagingSenderId: "259570769453",
+          appId: "1:259570769453:web:dd11e51c72078fcc5462a4",
+          measurementId: "G-CEMMD7E0KP"
+        };
+      
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const analytics = getAnalytics(app);
+
+        //Track page views
+        function trackPageView() {
+      const docRef = db.collection("pageViews").doc("count");
+
+      docRef.get().then((doc) => {
+          if (doc.exists) {
+              const currentCount = doc.data().count || 0;
+              docRef.update({
+                  count: currentCount + 1
+              });
+          } else {
+              docRef.set({ count: 1 });
+          }
+      }).catch((error) => {
+          console.error("Error updating page view count: ", error);
+      });
+  }
+  //Call the function
+  trackPageView();
+      </script>
 </body>
 </html>
