Working on Media queries

--- a/About.html
+++ b/About.html
@@ -15,10 +15,11 @@
   <header class="header">
     <nav class="CTA">
         <ul class="nav__links">
+          <div class ="Image1">
             <a href="index.html">
                 <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>
                 <div class="Vector7" ></div>
-
+              </div>
             </a>
             <li><a href="Projects.html">Project 1</a></li>
             <li><a href="Projects2.html">Project 2</a></li>
