--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         
         <div class="Image1">
             <a href="index.html">
-                <img class="Image7" src="public/images/Logo.png">
+                <img class="Image7" src="logo.svg">
             </a>
         </div>
           <nav class="CTA">
