--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="BackgroundBaseColor">
             
         <div class="BradleyAcostaRojas">BRADLEY ACOSTA ROJAS</div>
-        <div class="WebDeveloper" >WEB DEVELOPER</div>
+        <div class="WebDeveloper" >Computer Science Graduate </div>
         <div class="BradleyHi">Hi, I'm Bradley Acosta Rojas, a passionate Computer Science Major with a strong background in software engineering, full stack development, and web application security. I love coding, working in teams, and organizing tasks to ensure projects are completed correctly and efficiently.</div>
         <div class="Vector2" ></div>
         <div class="Vector3" ></div>
