--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
         <ul class="nav__links">
           <div class ="Image1">
             <a href="index.html">
-                <img class="Image7" style="width: 75px; height: 40px;" src="public/images/Logo.png"></a>
+                <img class="Image7" style="width: 80px; height: 40px;" src="logo.svg"></a>
                 <div class="Vector7" ></div>
               </div>
             </a>
