--- a/About.html
+++ b/About.html
@@ -17,25 +17,28 @@
         <ul class="nav__links">
           <div class ="Image1">
             <a href="index.html">
-                <img class="Image7" style="width: 80px; height: 40px;" src="logo.svg"></a>
-                <div class="Vector7" ></div>
+                <img class="Image7" src="logo.svg"></a>
               </div>
             </a>
+            <div class="Vector7" ></div>
+
             <li><a href="Projects.html">Project 1</a></li>
             <li><a href="Projects2.html">Project 2</a></li>
             <li><a href="About.html">About</a></li>
             <li><a href="Contact.html">Contact</a></li>
         </ul>
     </nav>
+
 </header>
+
 <br>
 <br><br>
 
 
 
 
-
       <div class="container">
+      
         <h1>About Me</h1>
         <p>Hello! My name is <strong>Bradley Acosta Rojas</strong>, and I'm a dedicated <strong> Computer Science</strong> major with a passion for coding and teamwork. I thrive on organizing tasks efficiently and believe that every mistake is an opportunity to learn and grow.</p>
         
